--- a/config-server/src/main/resources/config/activity-service.yml
+++ b/config-server/src/main/resources/config/activity-service.yml
@@ -3,8 +3,8 @@ spring:
     name: activity-service
   data:
     mongodb:
-      uri: mongodb://localhost:27017/fitness-activity
-      database: fitness-activity
+      uri: mongodb://localhost:27017/fitness-app
+      database: fitness-app
     rabbitmq:
       host: localhost
       port: 5672
@@ -19,8 +19,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    ip-address: 172.20.32.1
-    prefer-ip-address: true
+    hostname: localhost
+    prefer-ip-address: false
+    instance-id: ${spring.application.name}:${server.port}
 
 rabbitmq:
   exchange:
