--- a/config-server/src/main/resources/config/ai-service.yml
+++ b/config-server/src/main/resources/config/ai-service.yml
@@ -1,8 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/fitness-recommendations
-      database: fitness-recommendations
+      uri: mongodb://localhost:27017/fitness-app
+      database: fitness-app
     rabbitmq:
       host: localhost
       port: 5672
@@ -14,8 +14,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    ip-address: 172.20.32.1
-    prefer-ip-address: true
+    hostname: localhost
+    prefer-ip-address: false
+    instance-id: ${spring.application.name}:${server.port}
 
 server:
   port: 8083
