--- a/config-server/src/main/resources/config/api-gateway.yml
+++ b/config-server/src/main/resources/config/api-gateway.yml
@@ -16,7 +16,11 @@ spring:
           uri: lb://AI-SERVICE
           predicates:
             - Path=/api/recommendation/**
-
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:8181/realms/fitness-oauth2/protocol/openid-connect/certs
 server:
   port: 8080
 
@@ -24,6 +28,3 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-  instance:
-    ip-address: 172.20.32.1
-    prefer-ip-address: true
